--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -19,7 +19,7 @@
   color: var(--color-primary);
   cursor: pointer;
   padding: 0.5rem 1rem;
-  flex: 1;
+  width: 100%;
   font-size: var(--font-size-sm);
   font-weight: var(--font-weight-bold);
 }
